--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/j-koziel/guess-my-number/issues"
   },
   "homepage": "https://github.com/j-koziel/guess-my-number#readme",
-  "dependencies": {
+  "devDependencies": {
     "parcel": "^2.2.1"
   }
 }
